# vndb-guess-bot

./: .envrc  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
vndb-api/: Cargo.toml  README.md
vndb-api-derive/: Cargo.toml  README.md
vndb-api-derive/src/: expand.rs  fields.rs  filter_enum.rs  input.rs  lib.rs  path.rs  ty.rs
vndb-api-derive/src/selection/: fields.rs  filter.rs  generic_helpers.rs  mod.rs
vndb-api-derive/tests/: test.rs
vndb-api-derive/tests/support/: vndb_api_stub.rs
vndb-api-derive/tests/ui/: complex_types.rs  custom_leaf_types.rs  filters.rs  filters_fail.rs  filters_fail.stderr  flatten.rs  flatten_fail.rs  flatten_fail.stderr  is_primitive.rs  many_primitives.rs  primitives.rs  required_primitives.rs  selectors.rs  selectors_fail.rs  selectors_fail.stderr  skip.rs  skip_fail.rs  skip_fail.stderr  sort.rs  sort_fail.rs  sort_fail.stderr  unhandled_types.rs  unhandled_types.stderr
vndb-api/src/: ids.rs  lib.rs
vndb-api/src/client/: builder.rs  endpoint.rs  mock.rs  mod.rs  reqwest.rs  traits.rs
vndb-api/src/filter/: enums.rs  mod.rs
vndb-api/src/filter/values/: birthday.rs  error.rs  extlink.rs  label.rs  mod.rs  resolution.rs  tag.rs  traits.rs
vndb-api/src/models/: auth.rs  character.rs  common.rs  mod.rs  producer.rs  quote.rs  release.rs  staff.rs  stats.rs  tag.rs  traits.rs  vn.rs
vndb-api/src/models/character/: filter.rs  mod.rs  model.rs
vndb-api/src/query/: mod.rs  params.rs  request.rs  response.rs
vndb-api/tests/: client.rs  filter_macro.rs
vndb-api/tests/ui/: filter_macro_fail.rs  filter_macro_fail.stderr
(+36 files in other folders)
