[package]
name = "vndb-api-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "vndb_api_derive"
path = "src/lib.rs"


[dependencies]
syn = "2.0.106"
quote = "1.0.40"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.101"
heck = "0.5"
darling = "0.21.3"

[dev-dependencies]
trybuild = "1.0"
serde = "1"
serde_json = "1"
